<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" android:layout_height="fill_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="fill_parent" android:layout_height="wrap_content"
        android:textStyle="normal"
        android:text="@string/about_why"/>
    <TextView
        android:layout_width="fill_parent" android:layout_height="wrap_content"
        android:textStyle="normal"
        android:text="@string/about_how"/>
    <TextView
        android:layout_width="fill_parent" android:layout_height="wrap_content"
        android:textStyle="normal"
        android:text="@string/about_authors"/>
    <TextView
        android:layout_width="fill_parent" android:layout_height="wrap_content"
        android:textStyle="normal"
        android:text="@string/about_credit"/>
    <TextView
        android:layout_width="fill_parent" android:layout_height="wrap_content"
        android:textStyle="normal"
        android:text="@string/about_open_source"/>
</LinearLayout>